Fix header spacing (#204)
* Don't remove link underline on hover

* Stop hiding placeholder text on focus

* Prevent formation styles from messing with search

Formation includes a style rule applied to #search_form. Since that id
isn't currently being used for anything, I've simply removed it.

* Remove dark background from search form

--- a/src/base.scss
+++ b/src/base.scss
@@ -42,7 +42,6 @@ a {
   &:hover {
     transition: none;
     background-color: rgba(0,0,0,0);
-    text-decoration: none;
   }
 }
 
@@ -143,4 +142,10 @@ a:focus,
   &:focus {
     outline-color: #004795;
   }
+}
+
+// Override styles from formation/sass/base/_va.scss that hide
+// placeholder text on focus
+input:focus::placeholder {
+  color: $color-gray;
 }
